# LkProver

./: .ocamlformat  LICENSE  README.md  dune-project
lib/: dune  latex.ml  latex.mli  lexer.ml  lk.ml  parse.ml  parse.mli  parser.mly  parser_messages.messages  prover.ml  prover.mli
test/: dune  sequent.txt
