(library
 (name lkprover)
 (preprocess (pps ppx_deriving.show ppx_deriving.ord sedlex.ppx))
 (libraries sedlex menhirLib))

(menhir
 (flags --table)
 (modules parser))

(rule
  (action (with-stdout-to parser_messages.ml
    (run menhir
      %{dep:parser.mly}
      --compile-errors %{dep:parser_messages.messages}
    )
  ))
)
